# openSciRe

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CITATION.cff  Cargo.toml  LICENSE  LICENSE-COMMERCIAL.md  Makefile  README.md  RESPONSIBLE_DISCLOSURE.md  SECURITY.md  codemeta.json  opencode.jsonc  pyproject.toml
.github/: CODEOWNERS  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  ethics_concern.md  feature_request.md  rfc.md
critiques/: 01_overview.md  02_philosophy.md  03_structural_triad.md  04_co_scientist.md  05_alphaevolve_era.md  06_notebooklm.md  07_science_skills.md  08_miscellaneous.md  README.md
docs/: business-brief.md  competitor-teardown.md  pain-point-heatmap.md  phase-roadmap.md  published-surveys-review.md  threat-model.md  user-research-synthesis.md
docs/phases/: 00_5_user_research.md  00_cross_cutting.md  00_repo.md  01_core_package.md  02_model_provider.md  03_ethics_layer.md  04_literature_engine.md  05_rag.md  06_multi_agent.md  07_hypothesis_generation.md  08_cli.md  09_sandbox.md  10_jupyter.md  11_local_web_ui.md  12_api_server.md  13_academic_pilot.md  14_distribution.md  15_community_launch.md  16_monetization.md  17_yc_application.md  18_post_yc_scale.md
docs/proposals/: OpenSciRe.md  openscire-bio.md  openscire-hypothesis.md  openscire-literature.md  openscire-sandbox.md
docs/risks/: RISK_REGISTER.md
openscire-core/: README.md
openscire-core/src/openscire/: __init__.py  constants.py
openscire-core/src/openscire/agent/: README.md  __init__.py  bus.py  conflict.py  diversity.py  ethics_agent.py  exceptions.py  falsification.py  handoff.py  health.py  literature_review.py  models.py  session.py  state.py  supervisor.py  workflow.py
openscire-core/src/openscire/bridge/: __init__.py  adapter.py  cache.py  circuit_breaker.py  confidence.py  evidence_label.py  manifest.py  rate_limiter.py  resolver.py
openscire-core/src/openscire/bridges/: __init__.py  alphafold.py  entrez.py  interpro.py  pdb.py  uniprot.py
openscire-core/src/openscire/config/: README.md  __init__.py  byok.py  config.py
openscire-core/src/openscire/curation/: __init__.py  adversarial_search.py  assumption_miner.py  curator.py  models.py  ratio_enforcer.py  source_scorer.py
openscire-core/src/openscire/ethics/: README.md  __init__.py  audit.py  carbon.py  classifier.py  confabulation.py  durc.py  feedback.py  firewall.py  indigenous_knowledge.py  models.py  source_grounding.py  sovereignty.py  tier.py  verification_asymmetry.py
openscire-core/src/openscire/exceptions/: README.md  __init__.py  exceptions.py
openscire-core/src/openscire/logging/: README.md  __init__.py  logging.py
openscire-core/src/openscire/models/: README.md  __init__.py  models.py  philosophy.py
openscire-core/src/openscire/negative_results/: __init__.py  cross_link.py  export.py  integration.py  models.py  store.py
openscire-core/src/openscire/provenance/: README.md  __init__.py  enforcer.py  entry.py  exporter.py  graph.py  storage.py  tracker.py
openscire-core/src/openscire/provider/: README.md  __init__.py  anthropic_adapter.py  base.py  capabilities.py  cascade.py  factory.py  gemini_adapter.py  guarded.py  litellm_adapter.py  mcp.py  models.py  openai_adapter.py  quantization.py  registry.py
openscire-core/src/openscire/quantification/: README.md  __init__.py  contradiction.py  models.py  uncertainty.py
openscire-core/src/openscire/references/: __init__.py  dedup.py  mesh.py  models.py  sync.py  utils.py
openscire-core/src/openscire/sandbox/: __init__.py  models.py
openscire-core/src/openscire/serialization/: README.md  __init__.py  exceptions.py  schemas.py  serializer.py
openscire-core/tests/: conftest.py
openscire-core/tests/integration/: test_bio_bridge_cycle.py  test_bridge_crossref_cycle.py  test_confabulation_cycle.py  test_cross_document_context.py  test_ethical_checkpoint_cycle.py  test_firewall_cycle.py  test_full_cycle.py  test_literature_cycle.py  test_ncbi_crossref_cycle.py  test_ollama_provider.py  test_provenance_provider.py  test_provenance_security.py  test_rag_pipeline.py  test_reproducibility_cycle.py  test_supervisor_safety_integration.py
openscire-core/tests/unit/: test_agent_bus.py  test_agent_diversity.py  test_ajol_bridge.py  test_arxiv_bridge.py  test_byok.py  test_capabilities.py  test_cascade.py  test_citation_context_window.py  test_citation_formatter.py  test_cnki_bridge.py  test_confabulation_detector.py  test_config.py  test_context_window_manager.py  test_curation_adversarial.py  test_curation_assumptions.py  test_curation_models.py  test_curation_ratio.py  test_curation_scorer.py  test_curator.py  test_document_chunker.py  test_elibrary_bridge.py  test_ethics_agent.py  test_ethics_firewall.py  test_exceptions.py  test_factory.py  test_falsification_agent.py  test_figure_extractor.py  test_gap_analyzer.py  test_gap_coverage.py  test_gap_geography.py  test_gap_methodology.py  test_gap_models.py  test_gap_temporal.py  test_graph_analyzer.py  test_graph_builder.py  test_graph_clustering.py  test_graph_export.py  test_graph_influence.py  test_graph_temporal.py  test_grobid_client.py  (+50 more)
openscire-core/tests/unit/bridge/: test_bridge_adapter.py  test_bridge_cache.py  test_bridge_circuit_breaker.py  test_bridge_confidence.py  test_bridge_evidence_label.py  (+3 more)
openscire-sandbox-core/: Cargo.toml
openscire-sandbox-core/src/: lib.rs
skepsis-core/src/skepsis/: __init__.py
skepsis-sandbox-core/: Cargo.toml
skepsis-sandbox-core/src/: lib.rs
(+103 files in other folders)
