[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["openscire-core/src/openscire"]

[project]
name = "openscire-core"
version = "0.1.0"
description = "Local-first, open-source, epistemically honest research AI for scientists"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
authors = [
    { name = "openSciRe Contributors" },
]

classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
    "httpx>=0.28",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pynacl>=1.5.0",
    "pyyaml>=6.0",
    "structlog>=25.0.0",
]

[project.optional-dependencies]
dev = [
    "respx>=0.22",
    "ruff>=0.11.0",
    "mypy>=1.15.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6.0",
    "pre-commit>=4.0",
]
jupyter = [
    "notebook>=7.0",
    "jupyterlab>=4.0",
    "ipywidgets>=8.0",
]
docs = [
    "mkdocs>=1.6",
    "mkdocstrings[python]>=0.25",
]
perf = [
    "msgpack>=1.0",
    "tiktoken>=0.9",
]
mcp = [
    "mcp>=1.27",
]
byok = [
    "cryptography>=42.0",
    "keyring>=25.0",
]
router = [
    "litellm>=1.50.0",
]
all = [
    "openscire-core[dev,jupyter,docs,perf,mcp,byok,router]",
]

[project.urls]
Homepage = "https://openscire.dev"
Repository = "https://github.com/OpenSciRe/openSciRe"
Documentation = "https://docs.openscire.dev"
Issues = "https://github.com/OpenSciRe/openSciRe/issues"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "ARG", "RET", "PT", "ANN"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
warn_unused_configs = true
disallow_any_unimported = false
disallow_any_expr = false
disallow_any_decorated = false
disallow_any_explicit = false

[tool.pytest.ini_options]
testpaths = ["openscire-core/tests"]
addopts = "-v --cov=openscire --cov-report=html --cov-fail-under=75"
asyncio_mode = "auto"
markers = [
    "slow: tests that take more than 5 seconds",
    "integration: tests that hit external APIs",
    "network: tests that require network access",
    "gpu: tests that require a GPU",
]

[tool.coverage.run]
source = ["openscire-core/src/openscire"]
branch = true
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "def __repr__",
    "def __str__",
]
